--- a/main.css
+++ b/main.css
@@ -1,32 +1,51 @@
 * {
     box-sizing: border-box;
     text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+body {
+    height: 70vh;
+    width: 85vw;
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, .3);
+    margin: 15vh auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: .5rem;
+    
+}
 .board {
-    width: 310px;
-    border: 5px red solid;
+    width: 50vh;
+    height: 50vh;
     display: flex;
     flex-flow: row wrap;
+    justify-content: space-between;
+    align-content: space-between;
     margin: 0 auto;
-
+    gap: 1rem;
+    background: red
 }
 
 .box {
-    height: 100px;
-    width: 100px;
-    border: 2px red solid;
+    height: 30%;
+    width: 30%;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    /* background-image: url('images/x-icon.png') */
+    background-color: white;
 }
 
 .results {
-    font-size: 2rem;
-    background: red;
+    font-size: 4rem;
+    background: rgba(255, 0, 0, .3);
     font-weight: 600;
     color: white;
+    padding-top: 15%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+
 }
 
 .hidden {
